unpackaged/main/default/objects/Complaints_Log__c/Complaints_Log__c.object-meta.xml
<CustomObject>
    <label>Complaints Log</label>
    <nameField>
        <displayFormat>CLOG-{000000}</displayFormat>
        <label>Complaints Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>