unpackaged/main/default/objects/Complaints_Log__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>Details of action taken to address complaint</description>
    <inlineHelpText>Details of action taken to address complaint</inlineHelpText>
    <label>Action Taken</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>