unpackaged/main/default/objects/Complaints_Log__c/fields/Changes_to_Service__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Service__c</fullName>
    <description>If any changes are recommended to be made to our service as a result of this complaint, enter them here.</description>
    <inlineHelpText>If any changes are recommended to be made to our service as a result of this complaint, enter them here.</inlineHelpText>
    <label>Changes to Service</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>