unpackaged/main/default/objects/Complaints_Log__c/fields/CLOG_Status__c.field-meta.xml
<CustomField>
    <fullName>CLOG_Status__c</fullName>
    <label>Complaint Log Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>