unpackaged/main/default/objects/Complaints_Log__c/fields/Complaint_Details__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Details__c</fullName>
    <description>Enter the details of the complaint</description>
    <inlineHelpText>Enter the details of the complaint</inlineHelpText>
    <label>Complaint Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>