unpackaged/main/default/objects/Complaints_Log__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Outcome of complaint, whether the person who submitted the complaint is satisfied or not</description>
    <inlineHelpText>Outcome of complaint, whether the person who submitted the complaint is satisfied or not</inlineHelpText>
    <label>Outcome</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>