unpackaged/main/default/objects/Complaints_Log__c/fields/Source_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The patient who complained</description>
    <inlineHelpText>The patient who complained</inlineHelpText>
    <label>Source of Complaint</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complaints Logs</relationshipLabel>
    <relationshipName>Complaints_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>